package com.peterwitt.spotyfm.RadioAPI;

public enum ParseMode {
    CurrTime,
    TimeStamp,
    DayAndHour
}
